--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <ul style="font-size:1.6em;list-style:circle">
     <li>thunder
     <li>dance
-    <li>love
     <li>lava
-    <li style="list-style:disc"><a href="https://s9a.page/lemon">lemon</a>
+    <li>love
+    <li style="list-style:disc"><a href="https://s9a.page/lemon">color</a>
   </ul>
 </article>
